# tod-in-context-learning

./: .gitignore  Makefile  README.md  line_counts.json  pyproject.toml  run_tests.sh
actions/: new_phone_contract_quote.py  replace_card.py
data/flows/: replace_card.yml  replace_specific_card.yml  setup_recurrent_payment.yml
domain/: book_restaurant.yml  check_balance.yml  list_contacts.yml  transaction_search.yml  transfer_money.yml  verify_account.yml
e2e_tests/corrections/: user_corrects_a_branching_slot.yml
e2e_tests/digressions/: user_starts_with_a_very_long_message.yml
e2e_tests/happy_path/: user_books_a_restaurant_with_an_alternative_time.yml  user_lists_contacts.yml  user_searches_hotel.yml  user_sets_up_recurrent_payment.yml
scripts/: combine_results.py  count_lines.py  describe_tests.py
test_results/: version_1_cancellations.txt  version_1_chitchat.txt  version_1_corrections.txt  version_1_digressions.txt  version_1_disambiguation.txt  version_1_happy_path.txt  version_1_input_validation.txt  version_1_knowledge.txt  version_1_negations.txt  version_1_skip_question.txt  version_2_cancellations.txt  version_2_digressions.txt  version_2_happy_path.txt  version_2_input_validation.txt  version_2_negations.txt  version_2_nlu_trigger.txt  version_3_cancellations.txt  version_3_chitchat.txt  version_3_corrections.txt  version_3_happy_path.txt  version_3_input_validation.txt  version_3_repetitions.txt  version_3_skip_question.txt
version_1/: config.yml  endpoints.yml
version_2/: config.yml
version_3/: config.yml  endpoints.yml
(+149 files in other folders)
