[build-system]
requires = [ "poetry-core",]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "tod-in-context-learning"
version = "1.0.0"
description = "A starter point for exploring dialogue management 2.0."
authors = [ "Tom Bocklisch <tmbo@rasa.com>", "Alan Nichol <alan@rasa.com>"]
readme = "README.md"
[[tool.poetry.source]]
name = "rasa-plus"
url = "https://europe-west3-python.pkg.dev/rasa-releases/rasa-plus-py/simple/"
default = false
secondary = true

[tool.poetry.dependencies]
python = ">=3.8.1,<3.11"
rasa = [
    # {path = "../rasa", develop=true, python = "<3.9"},
    # {version = "3.7.0rc3", python = ">=3.9", allow-prereleases = true}
    {version = "3.7.0rc3", allow-prereleases = true}
]
prettytable = "^3.9.0"

[tool.poetry.group.dev.dependencies]
toml = "^0.10.2"
